# LLM-CADCoder

./: .gitignore  PDF2PNG.py  README.md  Sketch2CAD.py  generated_freecad.py  pyproject.toml  test_internvl.py
DataFlow/: COMMANDS.md  README.md
DataFlow/01.RawPDFWithSTEP/: 010加强条.step  011加强条.step  32HA1252-008-040.step  32HA1321-002-006.step  M001-08-006-B.STEP  M001-10-003-A.STEP  NE3436-3002011-002A防撞块.step  X262-07-013-A.STEP  X350-05-070-A-CQ.py  X350-05-070-A-CQ.step  X350-05-070-A-FC.py  X350-05-070-A.FCStd  X350-05-070-A.STEP  X350-05-071-A.STEP  X350-13-036-A.STEP  X350-16-039-A.STEP  X350-16-042-A.STEP  X441-58-009-A.STEP  X445-02-002-A.STEP  X445-10-029-A.STEP  X445-13-005-A.STEP  X445-16-036-A.STEP  X468-02-049-A.STEP  X476-04-002-A.STEP  X476-07-011-C.STEP  output_machined_plate.step
configs/: benchmark_tasks.yaml  dataflow.yaml  models.json  models.yaml
data/: samples.csv
data/annotations/: README.md
data/splits/: benchmark_small.jsonl
envs/: paddleocr-vl-server.yml  vlm-cadcoder-server.yml
src/vlm_cadcoder/: __init__.py  cli.py
src/vlm_cadcoder/cad/: __init__.py  cadquery_draft.py  llm_cadquery.py  view2cad_prototype.py
src/vlm_cadcoder/dataflow/: __init__.py  artifact_store.py  drawing_ir_builder.py  geometry_core_unet.py  layout_batch.py  (+10 more)
tests/: test_cadquery_draft.py  test_drawing_ir_builder.py  test_geometry_core_unet.py  test_layout_batch.py  test_layout_clean.py  test_llm_cadquery.py  test_pdf_batch.py  test_single_view_audit.py  test_view2cad_prototype.py  test_view_classification.py  test_view_filter.py  test_view_filter_batch.py
(+21 files in other folders)
